--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,5 +1,101 @@
 @import "../../sass/variables.scss";
 @import "../../sass/mixins.scss";
 
-.footer {
+.footer__decor {
+  height: 90px;
+  background-color: transparent;
+  background-image: url('../../img/image_guitar_header.png');
+  background-position: right bottom;
+  // background-size: 868px 279px;
+  background-repeat: no-repeat;
+  transform: rotate(180deg);
+}
+
+.footer__content {
+  position: relative;
+  padding-top: 60px;
+  padding-bottom: 63px;
+  background-color: $background-footer;
+  color: $white;
+
+  &::before {
+    @include pseudo;
+
+    width: 100%;
+    height: 6px;
+    top: -16px;
+    background-color: $background-footer;
+  }
+}
+
+.footer__wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 5px;
+}
+
+.footer__social {
+  padding-top: 120px;
+}
+
+.footer__section {
+  flex-basis: 15%;
+
+  &--about {
+    padding-left: 12px;
+  }
+
+  &--info {
+    flex-basis: 13%;
+  }
+}
+
+.section__text {
+  @include font(400, 10px, 12px);
+  @include reset-indent;
+
+  margin-top: 12px;
+
+  &--about {
+    letter-spacing: 0.3px;
+  }
+
+  &--catalog {
+    margin-left: 30px;
+  }
+
+  &--info {
+    margin-top: 10px;
+    letter-spacing: 1.3px;
+    line-height: 13px;
+  }
+}
+
+.section__icon {
+  display: inline-block;
+  width: 9px;
+  height: 9px;
+  background-color: transparent;
+  background-repeat: no-repeat;
+
+  &--clock {
+    background-image: url('../../img/icon_clock.svg');
+  }
+
+  &--phone {
+    background-image: url('../../img/icon_phone.svg');
+  }
+}
+
+.section__link {
+  color: $white;
+
+  &:hover {
+    opacity: 0.5;
+  }
+
+  &:focus,
+  &:active {
+    opacity: 0.7;
+  }
 }
