--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,5 +2,76 @@
 @import "../../sass/mixins.scss";
 
 .header {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.header__wrapper {
+  padding-top: 20px;
+  padding-bottom: 20px;
   background-color: $background-header;
+}
+
+.header__menu {
+  flex-basis: 50%;
+}
+
+.header__main-nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header__menu-button {
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+}
+
+.header__decor {
+  position: relative;
+  z-index: 2;
+  height: 290px;
+  margin-top: -38px;
+  background-color: transparent;
+  background-image: url('../../img/image_guitar_header.png');
+  background-position: right top;
+  background-repeat: no-repeat;
+}
+
+.header::before,
+.header::after,
+.header__wrapper::before,
+.header__wrapper::after,
+.header__decor-line::before,
+.header__decor-line::after {
+  @include pseudo;
+
+  width: 100%;
+  height: 4px;
+  background-color: $line-darkgrey;
+}
+
+.header::before {
+  bottom: 224px;
+}
+
+.header::after {
+  bottom: 210px;
+}
+
+.header__wrapper::before {
+  bottom: 196px;
+}
+
+.header__wrapper::after {
+  bottom: 182px;
+}
+
+.header__decor-line::before {
+  bottom: 168px;
+}
+
+.header__decor-line::after {
+  bottom: 154px;
 }
