--- a/src/components/main-page/main-page.scss
+++ b/src/components/main-page/main-page.scss
@@ -1,6 +1,4 @@
 @import "../../sass/mixins.scss";
-@import "../../sass/variables.scss";
-
 
 .main-page {
   @include reset-indent;
@@ -8,4 +6,5 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
