--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -34,7 +34,7 @@ a {
 }
 
 .container {
-    max-width: $desktop-width;
+    max-width: $max-content-width;
     margin-left: auto;
     margin-right: auto;
     padding-left: 40px;
