--- a/src/components/main-menu/main-menu.scss
+++ b/src/components/main-menu/main-menu.scss
@@ -21,12 +21,11 @@
 }
 
 .main-menu__link {
-  @include font(normal, 14px, 20px);
+  @include font(normal, 14px, 20px, 0.9px);
 
   display: block;
   padding: 25px 15px 10px;
   color: $black;
-  letter-spacing: 0.9px;
 
   &:hover{
     color: $dark;
