--- a/src/components/main-page/main-page.scss
+++ b/src/components/main-page/main-page.scss
@@ -1,4 +1,5 @@
 @import "../../sass/mixins.scss";
+@import "../../sass/variables.scss";
 
 .main-page {
   @include reset-indent;
@@ -7,4 +8,28 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  color: $black;
+}
+
+.main {
+  display: grid;
+  grid-template-areas:
+    "title title"
+    "crumbs crumbs"
+    "filters sort"
+    "filters catalog"
+    "filters pagination";
+  grid-template-columns: 22.5% 1fr;
+  column-gap: 30px;
+  width: 100%;
+  margin-top: -40px;
+}
+
+.main__title {
+  @include font(700, 22px, 26px);
+  @include reset-indent;
+
+  grid-area: title;
+  margin-bottom: 10px;
+  letter-spacing: 0.7px;
 }
