--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,6 +2,6 @@
 @import "fonts.scss";
 @import "mixins.scss";
 @import "common.scss";
-@import "page.scss";
+@import "main-page.scss";
 @import "footer-title.scss";
 @import "button.scss";
