--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -8,7 +8,7 @@
 .cards-wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  column-gap: 20px;
+  column-gap: 2.6%;
   row-gap: 30px;
 }
 
