--- a/src/components/sort/sort.scss
+++ b/src/components/sort/sort.scss
@@ -41,6 +41,7 @@
   }
 
   &:focus {
-    outline: 1px solid $box-stroke-gray;
+    // outline: 1px solid $box-stroke-gray;
+    outline: none;
   }
 }
