--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -28,7 +28,7 @@ $stars-gold: #FFD168;
 $line-darkgrey: #3F3F3F;
 $box-stroke-gray: #9F9E9E;
 $box-stroke-gray-hover: #585757;
-$box-stroke-gray-active: #585757;
+$box-stroke-gray-active: #C1C1C1;
 $box-stroke-gray-blocked: #DDDDDD;
 $card-stroke-gray: #DDDADA;
 $checkbox-blocked-fill: #F6F3F3;
