Исправляет нйденные ошибки

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -45,7 +45,9 @@
   @include font(400, 14px, 15px, 0.9px);
   @include reset-indent;
 
+  max-width: 65%;
   margin-left: -2px;
+  overflow-wrap: break-word;
 }
 
 .card__price {
@@ -55,6 +57,8 @@
 
 .card__img {
   align-self: center;
+  flex-shrink: 0;
+  margin-top: auto;
 }
 
 .card__rating {
@@ -62,6 +66,8 @@
   width: 70px;
   height: 14px;
   margin-right: 3px;
+  background-color: transparent;
+  background-repeat: repeat-x;
   background-image: url('./../../img/star-empty.svg');
 }
 
@@ -71,6 +77,8 @@
   top: 0;
   left: 0;
   height: 100%;
+  background-color: transparent;
+  background-repeat: repeat-x;
   background-image: url('./../../img/star-full.svg');
 }
 
