--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -33,5 +33,6 @@ $box-stroke-gray-blocked: #DDDDDD;
 $card-stroke-gray: #DDDADA;
 $checkbox-blocked-fill: #F6F3F3;
 $arrow-grey: #6C6C6C;
+$outline: #EEEEEE;
 
 $overlay: rgba(88, 87, 87, 0.6);
