--- a/src/components/cart/cart.scss
+++ b/src/components/cart/cart.scss
@@ -16,7 +16,7 @@
   padding-top: 30px;
 }
 
-.total__wrapper {
+.cart__total-wrapper {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
