--- a/src/components/main-menu/main-menu.scss
+++ b/src/components/main-menu/main-menu.scss
@@ -14,9 +14,10 @@
 .main-menu__item {
   margin: 0;
   margin-right: 12px;
+  padding-top: 15px;
 
   &:last-child {
-    margin-right: 0;
+    margin-right: auto;
   }
 }
 
@@ -24,7 +25,7 @@
   @include font(normal, 14px, 20px, 0.9px);
 
   display: block;
-  padding: 25px 15px 10px;
+  padding: 10px 15px 10px;
   color: $black;
 
   &:hover{
