--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,7 +2,7 @@
 @import "fonts.scss";
 @import "mixins.scss";
 @import "common.scss";
-@import "main-page.scss";
+@import "page.scss";
 @import "footer-title.scss";
 @import "button.scss";
 @import "modal.scss";
