--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,4 +1,4 @@
-$max-content-width: 1400px;
+$max-content-width: 1100px;
 $desktop-width: 1020px;
 $tablet-width: 768px;
 $mobile-width: 320px;
@@ -34,5 +34,6 @@ $card-stroke-gray: #DDDADA;
 $checkbox-blocked-fill: #F6F3F3;
 $arrow-grey: #6C6C6C;
 $outline: #EEEEEE;
+$input-background: rgba(237, 237, 237, 0.2);
 
 $overlay: rgba(88, 87, 87, 0.6);
