--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -11,7 +11,8 @@
 
 .cards-wrapper {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 220px);
+  justify-content: space-between;
   column-gap: 2.6%;
   row-gap: 30px;
 }
