--- a/src/components/promo/promo.scss
+++ b/src/components/promo/promo.scss
@@ -1,19 +1,24 @@
 @import "../../sass/variables.scss";
 @import "../../sass/mixins.scss";
 
+.promo {
+  @include reset-indent;
+}
+
 .promo__title {
   @include reset-indent;
   @include font(700, 16px, 20px, 1.2px);
 
   margin-top: 1px;
-  margin-bottom: 8px;
+  margin-bottom: 5px;
 }
 
 .promo__text {
   @include reset-indent;
   @include font(400, 12px, 15px, 0.9px);
 
-  margin-bottom: 19px;
+  display: inline-block;
+  margin-bottom: 18px;
 }
 
 .promo__input {
@@ -25,6 +30,12 @@
   margin-right: 33px;
   text-transform: uppercase;
   text-align: center;
+  border: 2px solid $card-stroke-gray;
+  border-radius: 2px;
+
+  &--discount {
+    background-color: $input-background;
+  }
 
   &:focus {
     border: 1px solid $rusty;
@@ -35,6 +46,7 @@
 .promo__btn {
   @include font(700, 16px, 18px, 1.2px);
 
+  font-family: inherit;
   min-width: 150px;
   padding: 9px 20px;
 }
